Update compiled style.css with new version too

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*
 Theme Name: We Go Places
-Text Domain: wegoplaces
-Version: 1.0.0
+Text Domain: wgp
+Version: 0.1.0
 Description: Custom WordPress theme for a client website called We Go Places by Beatriz Saiani
-Author: Farias Maiquita
+Author: Farias Lab E.I.
 Author URI: https://fariaslab.com/
 */
 *, *::before, *::after {
