Add some site header styles

--- a/_inc/assets/sass/layout/_header.sass
+++ b/_inc/assets/sass/layout/_header.sass
@@ -1,2 +1,12 @@
-// Site Header
+// WGP Site Header
+
+.wgp-site-header
+  background: $light-grey
+
+  > .inner-wrap
+    @include flex-align(space-between)
+
+    > *
+      padding: 24px 0
+
 
