Update header and base sass with more styles

--- a/_inc/assets/sass/base/_base.sass
+++ b/_inc/assets/sass/base/_base.sass
@@ -1,5 +1,12 @@
 // Basic Styles
 
+body
+  font-family: 'Gilroy', sans-serif
+
+a, a:link, a:visited
+  color: inherit
+  cursor: pointer
+
 .site-wrap
   min-width: 320px
 
