--- a/_inc/assets/sass/layout/_header.sass
+++ b/_inc/assets/sass/layout/_header.sass
@@ -9,4 +9,18 @@
     > *
       padding: 24px 0
 
+  .logo-img
+    display: block
+    width: 341px
 
+  .nav-wrap
+    @include flex-align(space-between)
+    flex-direction: column
+
+  .top-wrap
+    @include flex-align(flex-end)
+
+  .lang-switcher
+    @include flex-align()
+  .header-menu
+    @include flex-align(flex-end)
