Update sass color vars

--- a/_inc/assets/sass/abstracts/_variables.sass
+++ b/_inc/assets/sass/abstracts/_variables.sass
@@ -1,7 +1,11 @@
 // Site Wide Sass variables
 
 // Colors
-$light-grey: #F6F4EF
+$wgp-grey-bg: #F6F4EF
+$wgp-grey-border: #E0DED8
+$wgp-light-grey: #9C9B98
+$wgp-dark-grey: #4D4D4D
+$wgp-green: #00c2b4
 
 // Misc
 //$side-space: 80px
