--- a/_inc/assets/sass/abstracts/_variables.sass
+++ b/_inc/assets/sass/abstracts/_variables.sass
@@ -1,12 +1,9 @@
 // Site Wide Sass variables
 
-// Colors
+// Recurring Colors
 $wgp-grey-bg: #F6F4EF
 $wgp-grey-border: #E0DED8
 $wgp-light-grey: #9C9B98
 $wgp-dark-grey: #4D4D4D
 $wgp-green: #00c2b4
 $wgp-dark-green: #009B90
-
-// Misc
-//$side-space: 80px
