--- a/_inc/assets/sass/base/_base.sass
+++ b/_inc/assets/sass/base/_base.sass
@@ -16,9 +16,9 @@ img, svg
   min-width: 320px
 
 section > .inner-wrap
+  @include desktop-side-padding
   width: 100%
   max-width: 1240px
-  padding: 0 80px
   margin: 0 auto
 
 .site-main
