--- a/_inc/assets/sass/components/_hf-phone-link.sass
+++ b/_inc/assets/sass/components/_hf-phone-link.sass
@@ -1,8 +1,10 @@
 // Header & Footer Phone Link Component
 
 .hf-phone-link
+  display: inline-block
   font-size: 24px
   line-height: 29px
+  font-weight: 800
   transition: color .2s
 
   &:hover, &:active
