Add more base css for section content

--- a/_inc/assets/sass/base/_base.sass
+++ b/_inc/assets/sass/base/_base.sass
@@ -1,7 +1,7 @@
-// Basic Styles
+// WGP Basic Styles
 
 body
-  font-family: 'Gilroy', sans-serif
+  font: 300 20px/28px 'Gilroy', sans-serif
   color: $wgp-dark-grey
 
 a, a:link, a:visited
@@ -28,7 +28,26 @@ section > .inner-wrap
   flex-grow: 1
 
 .section-tagline
+  font-size: 14px
+  line-height: 17px
+  font-weight: 800
+  letter-spacing: 1.2px
+  text-transform: uppercase
 
+.section-title
+  font-size: 48px
+  line-height: 63px
+
+.body-text
+  letter-spacing: 1.2px
+
+.btn-primary
+  display: inline-block
+  background: $wgp-green
+  color: #fff
+  font-size: 18px
+  font-weight: 800
+  letter-spacing: 1.4px
 
 @media only screen and (max-width: 1239px)
   section > .inner-wrap
