Update css related to ask for a quote button

--- a/_inc/assets/sass/abstracts/_variables.sass
+++ b/_inc/assets/sass/abstracts/_variables.sass
@@ -5,5 +5,6 @@ $wgp-grey-bg: #F6F4EF
 $wgp-grey-border: #E0DED8
 $wgp-light-grey: #9C9B98
 $wgp-dark-grey: #4D4D4D
+$wgp-light-green: #5AE7CC
 $wgp-green: #00c2b4
 $wgp-dark-green: #009B90
