--- a/_inc/assets/sass/layout/_home-hero.sass
+++ b/_inc/assets/sass/layout/_home-hero.sass
@@ -3,7 +3,7 @@
 .wgp-home-hero
   background: $wgp-grey-bg
 
-  .inner-wrap
+  > .inner-wrap
     @include desktop-side-padding(36px)
     position: relative
 
@@ -11,10 +11,10 @@
       max-width: 680px
 
   .section-header
+    padding-top: 8px
     margin-bottom: 10px
 
   .section-tagline
-    padding-top: 44px
     margin-bottom: 14px
 
   .section-img
@@ -25,5 +25,5 @@
 
   .body-text
     margin-bottom: 33px
-    
+
 
