--- a/_inc/assets/sass/base/_base.sass
+++ b/_inc/assets/sass/base/_base.sass
@@ -87,9 +87,26 @@ section
 
 
 @media only screen and (max-width: 1239px)
-  section > .inner-wrap
-    @include tablet-side-padding
+
+  section
+    overflow: visible
+
+    > .inner-wrap
+      @include tablet-side-padding
+
 
 @media only screen and (max-width: 767px)
+
+  body
+    font-size: 16px
+    line-height: 24px
+
   section > .inner-wrap
     @include mobile-side-padding
+
+  .section-title
+    font-size: 36px
+    line-height: 48px
+
+  .body-text
+    letter-spacing: 1px
