--- a/_inc/assets/sass/layout/_home-hero.sass
+++ b/_inc/assets/sass/layout/_home-hero.sass
@@ -17,13 +17,77 @@
   .section-tagline
     margin-bottom: 14px
 
-  .section-img
+  .section-img-wrap
     position: absolute
     width: 509px
     right: -29px
     top: 35px
 
+  .section-img
+    width: 100%
+
   .body-text
     margin-bottom: 33px
 
 
+@media only screen and (max-width: 1239px)
+
+  .wgp-home-hero
+    margin-bottom: 92px
+
+    > .inner-wrap
+      @include tablet-side-padding
+
+    .section-header
+      padding-top: 24px
+      margin-bottom: 5px
+
+    .section-img-wrap
+      position: relative
+      top: auto
+      right: auto
+      width: 444px
+      margin-bottom: 32px
+
+    .body-text
+      margin: 0
+      padding-bottom: 65px
+
+    .btn-ask-quote
+      position: absolute
+      bottom: -40px
+
+
+@media only screen and (max-width: 767px)
+
+  .wgp-home-hero
+    margin-bottom: 101px
+
+    > .inner-wrap
+      @include mobile-side-padding
+
+    .section-header
+      padding: 0
+      margin-bottom: 13px
+      display: flex
+      flex-direction: column-reverse
+
+    .section-title
+      margin-bottom: 9px
+
+    .section-img-wrap
+      margin: 0 calc(100% * -20 / 375) 26px
+      padding-left: calc(100% * 10 / 375)
+      width: calc(100% + 100% * 40 / 375)
+      max-width: calc(100% + 100% * 40 / 375)
+      overflow: hidden
+
+    .section-img
+      width: 401px
+      max-width: none
+      margin: 0 auto
+
+    .btn-ask-quote
+      white-space: nowrap
+      left: 50%
+      transform: translateX(-50%)
