Update color naming and add new orange colors to sass vars

--- a/_inc/assets/sass/layout/_site-footer.sass
+++ b/_inc/assets/sass/layout/_site-footer.sass
@@ -23,7 +23,7 @@
   .footer-claims
     margin-bottom: 20px
 
-  li a, .blog-link
+  li a, .last-menu-link
     display: block
     font-size: 14px
     font-weight: 800
@@ -33,7 +33,7 @@
     transition: color .2s
 
     &:hover, &:active
-      color: $wgp-dark-green
+      color: $wgp-green-hover
 
   .footer-menu
     width: 110px
@@ -66,7 +66,7 @@
     .footer-title
       margin-bottom: 16px
 
-    .blog-link
+    .last-menu-link
       margin-bottom: 20px
 
 
