--- a/_inc/assets/sass/layout/_site-header.sass
+++ b/_inc/assets/sass/layout/_site-header.sass
@@ -29,10 +29,10 @@
 
       &.current-menu-item a
         border-color: $wgp-green
-        color: $wgp-light-grey
+        color: $wgp-lightgrey
 
       a:hover, a:active
-        color: $wgp-dark-green
+        color: $wgp-green-hover
         border-color: $wgp-green
 
   .header-menu
