--- a/_inc/assets/sass/abstracts/_variables.sass
+++ b/_inc/assets/sass/abstracts/_variables.sass
@@ -1,10 +1,17 @@
 // Site Wide Sass variables
 
 // Recurring Colors
+
 $wgp-grey-bg: #F6F4EF
 $wgp-grey-border: #E0DED8
-$wgp-light-grey: #9C9B98
-$wgp-dark-grey: #4D4D4D
-$wgp-light-green: #5AE7CC
+$wgp-lightgrey: #9C9B98
+$wgp-darkgrey: #4D4D4D
+
+$wgp-lightgreen: #5AE7CC
 $wgp-green: #00c2b4
-$wgp-dark-green: #009B90
+$wgp-green-hover: #009B90
+
+$wgp-orange: #FF8900
+$wgp-orange-hover: #E67C00
+$wgp-darkorange: #FF5100
+$wgp-darkorange-hover: #EB4B01
