--- a/_inc/assets/sass/base/_base.sass
+++ b/_inc/assets/sass/base/_base.sass
@@ -2,7 +2,7 @@
 
 body
   font: 300 20px/28px 'Gilroy', sans-serif
-  color: $wgp-dark-grey
+  color: $wgp-darkgrey
 
 a, a:link, a:visited
   color: inherit
@@ -45,6 +45,10 @@ section
 .body-text
   letter-spacing: 1.2px
 
+.arrow-icon
+  width: 16px
+  height: 13px
+
 .btn-primary
   display: inline-block
   position: relative
@@ -69,7 +73,7 @@ section
     transition: background-color .2s
 
   &:hover .inner-wrap
-    background-color: $wgp-dark-green
+    background-color: $wgp-green-hover
 
   .btn-text
     font-size: 18px
@@ -81,9 +85,44 @@ section
     color: #fff
 
   .arrow-icon
-    fill: $wgp-light-green
-    width: 16px
-    height: 13px
+    fill: $wgp-lightgreen
+
+.more-link
+  font-size: 18px
+  line-height: 22px
+  font-weight: 800
+  text-transform: uppercase
+  letter-spacing: 1.4px
+  display: inline-flex
+
+  .link-text
+    margin-left: 4px
+
+.icon-list
+  display: flex
+  text-align: center
+  margin-bottom: 37px
+
+  .icon-list-item
+    width: 90px
+
+  .icon-wrap
+    @include flex-align(center, center)
+    width: 50px
+    height: 50px
+    border-radius: 50%
+    overflow: hidden
+    position: relative
+    margin: 0 auto 9px
+
+    &:before
+      @include content-block
+      position: absolute
+      width: 100%
+      height: 100%
+
+  .icon-img
+    position: relative
 
 
 @media only screen and (max-width: 1239px)
@@ -103,6 +142,11 @@ section
 
   section > .inner-wrap
     @include mobile-side-padding
+
+  .section-tagline
+    font-size: 12px
+    line-height: 14px
+    letter-spacing: 1px
 
   .section-title
     font-size: 36px
