--- a/style.css
+++ b/style.css
@@ -177,6 +177,11 @@ section > .inner-wrap {
   letter-spacing: 1.2px;
 }
 
+.arrow-icon {
+  width: 16px;
+  height: 13px;
+}
+
 .btn-primary {
   display: inline-block;
   position: relative;
@@ -217,8 +222,48 @@ section > .inner-wrap {
 }
 .btn-primary .arrow-icon {
   fill: #5AE7CC;
-  width: 16px;
-  height: 13px;
+}
+
+.more-link {
+  font-size: 18px;
+  line-height: 22px;
+  font-weight: 800;
+  text-transform: uppercase;
+  letter-spacing: 1.4px;
+  display: inline-flex;
+}
+.more-link .link-text {
+  margin-left: 4px;
+}
+
+.icon-list {
+  display: flex;
+  text-align: center;
+  margin-bottom: 37px;
+}
+.icon-list .icon-list-item {
+  width: 90px;
+}
+.icon-list .icon-wrap {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  overflow: hidden;
+  position: relative;
+  margin: 0 auto 9px;
+}
+.icon-list .icon-wrap:before {
+  display: block;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+.icon-list .icon-img {
+  position: relative;
 }
 
 @media only screen and (max-width: 1239px) {
@@ -237,6 +282,12 @@ section > .inner-wrap {
 
   section > .inner-wrap {
     padding: 0 calc(100% * 20 / 375);
+  }
+
+  .section-tagline {
+    font-size: 12px;
+    line-height: 14px;
+    letter-spacing: 1px;
   }
 
   .section-title {
@@ -486,7 +537,7 @@ section > .inner-wrap {
 .wgp-site-footer .footer-claims {
   margin-bottom: 20px;
 }
-.wgp-site-footer li a, .wgp-site-footer .blog-link {
+.wgp-site-footer li a, .wgp-site-footer .last-menu-link {
   display: block;
   font-size: 14px;
   font-weight: 800;
@@ -495,7 +546,7 @@ section > .inner-wrap {
   text-transform: uppercase;
   transition: color 0.2s;
 }
-.wgp-site-footer li a:hover, .wgp-site-footer li a:active, .wgp-site-footer .blog-link:hover, .wgp-site-footer .blog-link:active {
+.wgp-site-footer li a:hover, .wgp-site-footer li a:active, .wgp-site-footer .last-menu-link:hover, .wgp-site-footer .last-menu-link:active {
   color: #009B90;
 }
 .wgp-site-footer .footer-menu {
@@ -529,7 +580,7 @@ section > .inner-wrap {
 .wgp-site-footer .socials-wrap .footer-title {
   margin-bottom: 16px;
 }
-.wgp-site-footer .socials-wrap .blog-link {
+.wgp-site-footer .socials-wrap .last-menu-link {
   margin-bottom: 20px;
 }
 
@@ -560,6 +611,7 @@ section > .inner-wrap {
 }
 .wgp-home-hero {
   background: #F6F4EF;
+  margin-bottom: 77px;
 }
 .wgp-home-hero > .inner-wrap {
   padding: 36px 80px;
