Update some base css

--- a/_inc/assets/sass/abstracts/_variables.sass
+++ b/_inc/assets/sass/abstracts/_variables.sass
@@ -14,4 +14,4 @@ $wgp-green-hover: #009B90
 $wgp-orange: #FF8900
 $wgp-orange-hover: #E67C00
 $wgp-darkorange: #FF5100
-$wgp-darkorange-hover: #EB4B01
+$wgp-darkorange-hover: #C53F01
