Minor updates to home hero widget and its css

--- a/_inc/assets/sass/layout/_home-hero.sass
+++ b/_inc/assets/sass/layout/_home-hero.sass
@@ -2,7 +2,6 @@
 
 .wgp-home-hero
   background: $wgp-grey-bg
-  margin-bottom: 77px
 
   > .inner-wrap
     @include desktop-side-padding(36px)
@@ -34,7 +33,7 @@
 @media only screen and (max-width: 1239px)
 
   .wgp-home-hero
-    margin-bottom: 92px
+    margin-bottom: 40px
 
     > .inner-wrap
       @include tablet-side-padding
@@ -62,7 +61,6 @@
 @media only screen and (max-width: 767px)
 
   .wgp-home-hero
-    margin-bottom: 101px
 
     > .inner-wrap
       @include mobile-side-padding
@@ -73,7 +71,7 @@
       display: flex
       flex-direction: column-reverse
 
-    .section-title
+    .hero-title
       margin-bottom: 9px
 
     .section-img-wrap
