--- a/_inc/assets/sass/style.scss
+++ b/_inc/assets/sass/style.scss
@@ -26,7 +26,8 @@ Author URI: https://fariaslab.com/
 @import
   'layout/site-header',
   'layout/site-footer',
-  'layout/home-hero';
+  'layout/home-hero',
+  'layout/home-training';
 
 // Components
 @import
