--- a/_inc/assets/sass/base/_base.sass
+++ b/_inc/assets/sass/base/_base.sass
@@ -135,9 +135,19 @@ section
       position: absolute
       width: 100%
       height: 100%
+      opacity: .1
 
   .icon-img
     position: relative
+
+  .icon-tune, .icon-chat, .icon-manual, .icon-brochure
+    width: 20px
+
+  .icon-documents
+    width: 19px
+
+  .icon-stairs, .icon-website
+    width: 18px
 
 
 @media only screen and (max-width: 1239px)
@@ -152,6 +162,21 @@ section
     font-size: 32px
     line-height: 40px
     letter-spacing: 1.6px
+
+  .icon-list
+    display: block
+    margin: 0 0 33px 376px
+
+    .icon-list-item
+      @include flex-align(flex-start, center)
+      width: 100%
+      padding: 0
+
+      &:not(:last-child)
+        margin: 0 0 24px
+
+    .icon-wrap
+      margin: 0 11px 0 0
 
 
 @media only screen and (max-width: 767px)
@@ -179,3 +204,6 @@ section
 
   .body-text
     letter-spacing: 1px
+
+  .icon-list
+    margin-left: 0
